tests/paczka1/fuzzy1/49694080.err
Error in line 10: V7JPSc7M8 S922 84,6
Error in line 14: SrVKVYlsGi0 S897 47,6
Error in line 22: SrVKVYlsGi0 S922 48,0
Error in line 23: SrVKVYlsGi0 S196 53,9
Error in line 33: Nlp6DI S196 39,65
